# routes/api.php
@@ -2,7 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\Contacts\AuthContactsController;
+use App\Http\Controllers\API\Agents\AuthAgentsController;
 
 /*
 |--------------------------------------------------------------------------
@@ -14,14 +14,14 @@ use App\Http\Controllers\API\Contacts\AuthContactsController;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-//Route::controller(AuthContactsController::class)->group(function(){
+//Route::controller(AuthAgentsController::class)->group(function(){
 //    Route::post('dashboard/login', 'login');
 //});
 Route::group([
     'middleware' => 'api',
     'prefix' => 'auth/contact'
 ], function ($router) {
-    Route::controller(AuthContactsController::class)->group(function(){
+    Route::controller(AuthAgentsController::class)->group(function(){
         Route::post('/register', 'register');
         Route::post('/login', 'login');
         Route::post('/logout', 'logout');
@@ -30,13 +30,13 @@ Route::group([
         Route::post('/tokenid', 'tokenId');
     });
 });
-//Route::middleware('auth:contacts')->group(function(){
-//    Route::get('auth/register', 'AuthContactsController@register');
-//    Route::get('auth/login', 'AuthContactsController@login');
-//    Route::get('auth/logout', 'AuthContactsController@logout');
-//    Route::get('auth/token', 'AuthContactsController@token');
-//    Route::get('auth/me', 'AuthContactsController@me');
-//    Route::get('auth/tokenid', 'AuthContactsController@tokenId');
+//Route::middleware('auth:agents')->group(function(){
+//    Route::get('auth/register', 'AuthAgentsController@register');
+//    Route::get('auth/login', 'AuthAgentsController@login');
+//    Route::get('auth/logout', 'AuthAgentsController@logout');
+//    Route::get('auth/token', 'AuthAgentsController@token');
+//    Route::get('auth/me', 'AuthAgentsController@me');
+//    Route::get('auth/tokenid', 'AuthAgentsController@tokenId');
 //});
 //Route::namespace('Admin')->name('admin.')->prefix('admin')->group(function () {
 //    Route::get('login', 'AdminAuthController@getLogin')->name('login');
